Overflow issue for mobile site
Hide overflow for Title javascript background square thingy

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -259,3 +259,7 @@ border: 1px dashed #AD0000;
 		color: #fff !important;
 	}
 }
+
+body.hasGoogleVoiceExt {
+	overflow: hidden;
+}
